crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@code_fences.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 20
  ploc: 4
  cloc: 11
  tloc: 0
  mloc: 0
  bloc: 5
  aloc: 11
loc_ratios:
  artifact_line_ratio: 0.55
  code_line_ratio: 0.55
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.25
size:
  words: 15
  effective_content_units: 3.9124999999999996
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 20
    parent_section_id: ~
    child_section_ids: []
    word_count: 15
    block_count: 5
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 2.0250000000000004
  halstead:
    operators_distinct: 4
    operators_total: 6
    operands_distinct: 18
    operands_total: 20
    vocabulary: 22
    length: 26
    volume: 115.94522208456974
    difficulty: 2.2222222222222223
    effort: 257.65604907682166
    embedded_volume: 0.981458449927413
    total_volume: 116.92668053449715
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 96.49799999999999
  section_balance_score: 0.85
  good_scaffold_score: 0.2
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.12
  evidence_coverage_score: 1
ai_era:
  filler_lazy_structure_risk: 0.3335
  labels:
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - specificity-scarcity
      - 1
    - - low-repository-grounding
      - 0.88
    - - lazy-sectioning
      - 0.24999999999999994
review:
  review_criticality_index: 11.309999999999999
artifacts:
  - id: 0
    kind: code
    start_line: 5
    end_line: 9
    language_tag: rust
    size: 3
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
  - id: 1
    kind: code
    start_line: 13
    end_line: 18
    language_tag: json
    size: 4
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 20
        end_line: 20
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.722
      hapax_ratio: 0.692
      dis_ratio: 0.231
      lexical_density: 0.778
      avg_sentence_words: 4.5
      p90_sentence_words: 5
      max_sentence_words: 5
      stddev_sentence_words: 0.866
      avg_word_chars: 5.722
      p90_word_chars: 8
      sentence_count: 4
      words_total: 18
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 18
    sentences_counted: 4
    blocks_stripped:
      - code
