crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@cognitive_cluster.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 42
  ploc: 23
  cloc: 6
  tloc: 0
  mloc: 0
  bloc: 13
  aloc: 6
loc_ratios:
  artifact_line_ratio: 0.14285714285714285
  code_line_ratio: 0.14285714285714285
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.30952380952380953
size:
  words: 57
  effective_content_units: 2.3374999999999995
  sections: 6
  headings: 6
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 42
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
    word_count: 19
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 6
    end_line: 14
    parent_section_id: 0
    child_section_ids: []
    word_count: 12
    block_count: 9
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 15
    end_line: 21
    parent_section_id: 0
    child_section_ids: []
    word_count: 11
    block_count: 5
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 22
    end_line: 27
    parent_section_id: 0
    child_section_ids: []
    word_count: 2
    block_count: 1
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 28
    end_line: 33
    parent_section_id: 0
    child_section_ids: []
    word_count: 0
    block_count: 1
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 34
    end_line: 42
    parent_section_id: 0
    child_section_ids: []
    word_count: 13
    block_count: 3
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 5
  cognitive_complexity: 20.154333333333337
  halstead:
    operators_distinct: 10
    operators_total: 42
    operands_distinct: 66
    operands_total: 79
    vocabulary: 76
    length: 121
    volume: 755.9992291266738
    difficulty: 5.984848484848485
    effort: 4524.540840985396
    embedded_volume: 0
    total_volume: 755.9992291266738
links:
  total: 6
  internal: 0
  relative: 0
  external: 6
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0.1
  information_scent_score: 0.3
  review_burden: 6
link_records:
  - line: 24
    class: external
    destination: "https://a.example.com"
    text: one
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 24
    class: external
    destination: "https://b.example.com"
    text: two
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 25
    class: external
    destination: "https://c.example.com"
    text: three
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 25
    class: external
    destination: "https://d.example.com"
    text: four
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 26
    class: external
    destination: "https://e.example.com"
    text: five
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 26
    class: external
    destination: "https://f.example.com"
    text: six
    is_image: false
    is_bare_url: false
    resolved: ~
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 88.72496194331983
  section_balance_score: 0.85
  good_scaffold_score: 0.14500000000000002
  artifact_debt_score: 0.35
grounding:
  repository_grounding_score: 0.04000000000000001
  evidence_coverage_score: 0.1346153846153846
ai_era:
  filler_lazy_structure_risk: 0.39147368421052636
  labels:
    - large-unanchored-prose
    - low-repository-grounding
  top_contributors:
    - - low-repository-grounding
      - 0.96
    - - large-unanchored-prose
      - 0.7736842105263158
    - - specificity-scarcity
      - 0.3728070175438597
review:
  review_criticality_index: 21.3325
artifacts:
  - id: 0
    kind: code
    start_line: 30
    end_line: 32
    language_tag: ~
    size: 1
    has_explanation: true
    has_label: false
    oversized: false
    burden: 2.5
  - id: 1
    kind: code
    start_line: 38
    end_line: 40
    language_tag: bash
    size: 1
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
      - start_line: 6
        end_line: 6
        language: en
      - start_line: 8
        end_line: 9
        language: en
      - start_line: 9
        end_line: 10
        language: en
      - start_line: 10
        end_line: 11
        language: en
      - start_line: 11
        end_line: 12
        language: en
      - start_line: 12
        end_line: 12
        language: en
      - start_line: 13
        end_line: 13
        language: en
      - start_line: 15
        end_line: 15
        language: en
      - start_line: 17
        end_line: 17
        language: en
      - start_line: 20
        end_line: 20
        language: en
      - start_line: 22
        end_line: 22
        language: en
      - start_line: 24
        end_line: 26
        language: en
      - start_line: 28
        end_line: 28
        language: en
      - start_line: 34
        end_line: 34
        language: en
      - start_line: 36
        end_line: 36
        language: en
      - start_line: 42
        end_line: 42
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.735
      hapax_ratio: 0.66
      dis_ratio: 0.226
      lexical_density: 0.779
      avg_sentence_words: 4.278
      p90_sentence_words: 8
      max_sentence_words: 19
      stddev_sentence_words: 4.08
      avg_word_chars: 4.909
      p90_word_chars: 9
      sentence_count: 18
      words_total: 77
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0.013
      nominalization_density: 0.026
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 77
    sentences_counted: 18
    blocks_stripped:
      - code
