crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@diagram_heavy_scaffolded.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 186
  ploc: 95
  cloc: 64
  tloc: 0
  mloc: 0
  bloc: 27
  aloc: 64
loc_ratios:
  artifact_line_ratio: 0.34408602150537637
  code_line_ratio: 0.34408602150537637
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.14516129032258066
size:
  words: 831
  effective_content_units: 45.9625
  sections: 7
  headings: 7
ecu_inputs:
  table_cells: 0
  diagram_nodes: 29
  diagram_edges: 34
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 186
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
    word_count: 51
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 10
    end_line: 40
    parent_section_id: 0
    child_section_ids: []
    word_count: 129
    block_count: 4
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 42
    end_line: 78
    parent_section_id: 0
    child_section_ids: []
    word_count: 185
    block_count: 4
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 80
    end_line: 115
    parent_section_id: 0
    child_section_ids: []
    word_count: 149
    block_count: 4
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 117
    end_line: 148
    parent_section_id: 0
    child_section_ids: []
    word_count: 152
    block_count: 4
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 150
    end_line: 175
    parent_section_id: 0
    child_section_ids: []
    word_count: 96
    block_count: 3
  - section_id: 6
    heading_level: 2
    heading_text: ~
    start_line: 177
    end_line: 186
    parent_section_id: 0
    child_section_ids: []
    word_count: 69
    block_count: 1
complexity:
  reading_path_complexity: 1.9000000000000004
  reading_path_complexity_raw: 11
  cognitive_complexity: 7.74375
  halstead:
    operators_distinct: 6
    operators_total: 90
    operands_distinct: 443
    operands_total: 849
    vocabulary: 449
    length: 939
    volume: 8273.126765021936
    difficulty: 5.749435665914221
    effort: 47565.810091446656
    embedded_volume: 0
    total_volume: 8273.126765021936
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 5
  diagram_nodes_total: 29
  diagram_edges_total: 34
  diagram_cycles_total: 10
  visual_scaffold_score: 1
  visual_net_effect: 35.300000000000004
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 96.0348577113937
  section_balance_score: 1
  good_scaffold_score: 0.25
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0.37362637362637363
ai_era:
  filler_lazy_structure_risk: 0.32
  labels:
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - low-repository-grounding
      - 1
    - - specificity-scarcity
      - 1
    - - hollow-references
      - 0
review:
  review_criticality_index: 4.4081114620938635
artifacts:
  - id: 0
    kind: diagram
    start_line: 18
    end_line: 29
    language_tag: mermaid
    size: 6
    has_explanation: true
    has_label: true
    oversized: false
    burden: 7.200000000000001
  - id: 1
    kind: diagram
    start_line: 52
    end_line: 64
    language_tag: mermaid
    size: 6
    has_explanation: true
    has_label: true
    oversized: false
    burden: 9.25
  - id: 2
    kind: diagram
    start_line: 89
    end_line: 103
    language_tag: mermaid
    size: 5
    has_explanation: true
    has_label: true
    oversized: false
    burden: 14.45
  - id: 3
    kind: diagram
    start_line: 124
    end_line: 135
    language_tag: mermaid
    size: 6
    has_explanation: true
    has_label: true
    oversized: false
    burden: 7.200000000000001
  - id: 4
    kind: diagram
    start_line: 157
    end_line: 168
    language_tag: mermaid
    size: 6
    has_explanation: true
    has_label: true
    oversized: false
    burden: 7.200000000000001
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 8
        language: en
      - start_line: 10
        end_line: 10
        language: en
      - start_line: 12
        end_line: 16
        language: en
      - start_line: 31
        end_line: 34
        language: en
      - start_line: 36
        end_line: 40
        language: en
      - start_line: 42
        end_line: 42
        language: en
      - start_line: 44
        end_line: 50
        language: en
      - start_line: 66
        end_line: 71
        language: en
      - start_line: 73
        end_line: 78
        language: en
      - start_line: 80
        end_line: 80
        language: en
      - start_line: 82
        end_line: 87
        language: en
      - start_line: 105
        end_line: 109
        language: en
      - start_line: 111
        end_line: 115
        language: en
      - start_line: 117
        end_line: 117
        language: en
      - start_line: 119
        end_line: 122
        language: en
      - start_line: 137
        end_line: 141
        language: en
      - start_line: 143
        end_line: 148
        language: en
      - start_line: 150
        end_line: 150
        language: en
      - start_line: 152
        end_line: 155
        language: en
      - start_line: 170
        end_line: 175
        language: en
      - start_line: 177
        end_line: 177
        language: en
      - start_line: 179
        end_line: 186
        language: en
  english:
    readability:
      flesch_reading_ease: 40.458
      flesch_kincaid_grade: 11.478
      gunning_fog: 13.563
      smog: 13.719
      ari: 11.749
      coleman_liau: 14.014
      dale_chall_new: 11.296
      dale_chall_list: ngsl-1.2
      forcast: 12.6
      lix: 48.762
      rix: 5.164
      ensemble_grade_band:
        - 11.478
        - 14.014
    lexical:
      mattr_50: 0.804
      hapax_ratio: 0.697
      dis_ratio: 0.138
      lexical_density: 0.637
      avg_sentence_words: 15.545
      p90_sentence_words: 27
      max_sentence_words: 39
      stddev_sentence_words: 9.62
      avg_word_chars: 5.395
      p90_word_chars: 9
      sentence_count: 55
      words_total: 855
    wording:
      passive_ratio: 0.145
      hedge_density: 0.02
      weasel_density: 0.002
      wordy_density: 0.002
      adverb_density: 0.015
      nominalization_density: 0.027
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 4
      wording_quality_score: 0.993
    inclusive_language:
      flags:
        - category: condescending
          surface: easy
          preferred: (remove — describe steps instead)
          count: 1
      inclusive_language_score: 0.95
      flag_count: 1
    short_doc_warning: false
  japanese: ~
  meta:
    short_doc_warning: false
    words_counted: 855
    sentences_counted: 55
    blocks_stripped:
      - code
