crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@diagram_mermaid.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 13
  ploc: 5
  cloc: 5
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 5
loc_ratios:
  artifact_line_ratio: 0.38461538461538464
  code_line_ratio: 0.38461538461538464
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.23076923076923078
size:
  words: 46
  effective_content_units: 3.2416666666666667
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 2
  diagram_edges: 2
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 13
    parent_section_id: ~
    child_section_ids: []
    word_count: 46
    block_count: 3
complexity:
  reading_path_complexity: 2
  reading_path_complexity_raw: 2
  cognitive_complexity: 1.4329326923076922
  halstead:
    operators_distinct: 5
    operators_total: 16
    operands_distinct: 44
    operands_total: 50
    vocabulary: 49
    length: 66
    volume: 370.5708497116037
    difficulty: 2.8409090909090913
    effort: 1052.7580957716016
    embedded_volume: 0
    total_volume: 370.5708497116037
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 1
  diagram_nodes_total: 2
  diagram_edges_total: 2
  diagram_cycles_total: 1
  visual_scaffold_score: 0.9569487529386909
  visual_net_effect: 1.4000000000000004
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 97.90709237924113
  section_balance_score: 1
  good_scaffold_score: 0.23923718823467272
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.025155279503105588
  evidence_coverage_score: 0.6153846153846154
ai_era:
  filler_lazy_structure_risk: 0.3737732919254658
  labels:
    - low-artifact-density
    - low-repository-grounding
  top_contributors:
    - - low-repository-grounding
      - 0.9748447204968944
    - - low-artifact-density
      - 0.6666666666666667
    - - specificity-scarcity
      - 0.3442028985507246
review:
  review_criticality_index: 6.327018633540373
artifacts:
  - id: 0
    kind: diagram
    start_line: 6
    end_line: 10
    language_tag: mermaid
    size: 2
    has_explanation: true
    has_label: true
    oversized: false
    burden: 3.4000000000000004
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
      - start_line: 12
        end_line: 13
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.816
      hapax_ratio: 0.875
      dis_ratio: 0.075
      lexical_density: 0.735
      avg_sentence_words: 16.333
      p90_sentence_words: 24
      max_sentence_words: 24
      stddev_sentence_words: 9.463
      avg_word_chars: 4.857
      p90_word_chars: 9
      sentence_count: 3
      words_total: 49
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0.041
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 49
    sentences_counted: 3
    blocks_stripped:
      - code
